design: container 내부와 밖 배경색 추가

--- a/src/components/layouts/MainLayout.module.scss
+++ b/src/components/layouts/MainLayout.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/global.scss";
 
 .container {
-  background-color: antiquewhite;
+  background-color: $bg-container;
   max-width: $max-width-val;
   margin: 0 auto;
   min-height: 100vh;
