--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,4 +8,8 @@ $max-width-val: 430px;
 $bg-container: white;
 
 // container(가운데 정렬된 430px)를 제외한 배경
-$bg-outside: #f0ebef;
+$bg-outside: #f0e9ef;
+
+body {
+  background-color: $bg-outside;
+}
