--- a/src/components/headers/MainHeader.module.scss
+++ b/src/components/headers/MainHeader.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/global.scss";
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -10,5 +12,9 @@
 
   p {
     margin-top: 3px;
+  }
+
+  .subText {
+    @include subText;
   }
 }
