--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,7 +1,14 @@
 $sub-text-color: #949494;
+$main-text-color: #000;
 
 @mixin subText {
   font-size: 1.3rem;
   font-weight: bold;
   color: $sub-text-color;
+}
+
+@mixin mainText {
+  font-size: 1.5rem;
+  color: $main-text-color;
+  font-weight: bold;
 }
