--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -7,6 +7,11 @@ $main-text-color: #000;
   color: $sub-text-color;
 }
 
+@mixin subText-small {
+  @include subText;
+  font-size: 1.1rem;
+}
+
 @mixin mainText {
   font-size: 1.5rem;
   color: $main-text-color;
