--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,5 +1,6 @@
 $sub-text-color: #949494;
 $main-text-color: #000;
+$input-border-color: #cbcbcb;
 
 @mixin subText {
   font-size: 1.3rem;
@@ -16,4 +17,9 @@ $main-text-color: #000;
   font-size: 1.5rem;
   color: $main-text-color;
   font-weight: bold;
+}
+
+@mixin input {
+  border: 1px solid $input-border-color;
+  border-radius: 10px;
 }
