--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -2,6 +2,8 @@ $sub-text-color: #949494;
 $main-text-color: #000;
 $input-border-color: #cbcbcb;
 
+$radius: 10px;
+
 @mixin subText {
   font-size: 1.3rem;
   font-weight: bold;
@@ -21,5 +23,5 @@ $input-border-color: #cbcbcb;
 
 @mixin input {
   border: 1px solid $input-border-color;
-  border-radius: 10px;
+  border-radius: $radius;
 }
