design: field-gap 적용

--- a/src/components/fields/MeetingDaysField.module.scss
+++ b/src/components/fields/MeetingDaysField.module.scss
@@ -1,7 +1,8 @@
 @import "../../styles/global.scss";
 
 .container {
-  margin-top: 40px;
+  margin-top: $field-gap;
+
   .header {
     display: flex;
     justify-content: space-between;
