--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -18,7 +18,7 @@ $radius: 10px;
 @mixin mainText {
   font-size: 1.5rem;
   color: $main-text-color;
-  font-weight: bold;
+  // font-weight: bold;
 }
 
 @mixin input {
