--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,10 @@ $bg-container: white;
 // container(가운데 정렬된 430px)를 제외한 배경
 $bg-outside: #f0e9ef;
 
+$primary: #f9527d;
+
+$secondary: #f4f4f4;
+
 body {
   background-color: $bg-outside;
 }
