design: MeetingTimeField의 select 스타일로 input mixin 적용

--- a/src/components/fields/MeetingTimeField.module.scss
+++ b/src/components/fields/MeetingTimeField.module.scss
@@ -18,6 +18,9 @@
 
       select {
         width: 100%;
+        @include input;
+        padding: 8px 10px;
+        box-sizing: border-box;
       }
     }
   }
