update(mixin.scss): input 컴포넌트 focus시 스타일링

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -24,4 +24,8 @@ $radius: 10px;
 @mixin input {
   border: 1px solid $input-border-color;
   border-radius: $radius;
+
+  &:focus {
+    border-color: $primary;
+  }
 }
