update(mixin.scss): input box-sizing을 border-box로 변경

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -24,6 +24,7 @@ $radius: 10px;
 @mixin input {
   border: 1px solid $input-border-color;
   border-radius: $radius;
+  box-sizing: border-box;
 
   &:focus {
     border-color: $primary;
