--- a/src/components/fields/MeetingNameField.module.scss
+++ b/src/components/fields/MeetingNameField.module.scss
@@ -12,7 +12,7 @@
     display: block;
     margin-top: 10px;
     width: 100%;
-    padding: 10px 5px;
+    padding: 10px;
     font-size: 1.4rem;
   }
 }
