--- a/src/components/fields/MeetingTimeField.module.scss
+++ b/src/components/fields/MeetingTimeField.module.scss
@@ -22,8 +22,9 @@
       select {
         width: 100%;
         @include input;
-        padding: 8px 10px;
+        padding: 10px;
         box-sizing: border-box;
+        font-size: 1.2rem;
       }
 
       span {
