--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,23 +1,7 @@
 @import "./font.scss";
 @import "./reset.scss";
 @import "./mixin.scss";
-
-// layout
-$max-width-val: 380px;
-$padding-y: 20px;
-$field-gap: 40px;
-
-// color
-$bg-container: white;
-
-// container(가운데 정렬된 430px)를 제외한 배경
-$bg-outside: #f0e9ef;
-
-$primary: #f9527d;
-
-$secondary: #f4f4f4;
-
-$btn-font-color: white;
+@import "./variables.scss";
 
 body {
   background-color: $bg-outside;
