update(global.scss): variable.scss 추가

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,3 +14,9 @@ $primary: #f9527d;
 $secondary: #f4f4f4;
 
 $btn-font-color: white;
+
+$sub-text-color: #949494;
+$main-text-color: #000;
+$input-border-color: #cbcbcb;
+
+$radius: 10px;
