update: 모든 module scss 파일 variables, mixin 임포트

--- a/src/components/headers/MainHeader.module.scss
+++ b/src/components/headers/MainHeader.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/variables.scss";
+@import "../../styles/mixin.scss";
+
 .container {
   display: flex;
   justify-content: space-between;
