--- a/src/components/headers/MainHeader.module.scss
+++ b/src/components/headers/MainHeader.module.scss
@@ -22,4 +22,11 @@
   .hamburgerButton {
     cursor: pointer;
   }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
 }
