--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -1,5 +1,7 @@
+@import "../../styles/variables.scss";
+
 .container {
-  background-color: red;
+  background-color: $sidebar-color;
 
   .closeButton {
     cursor: pointer;
