update(SidebarWrap.module.scss): sidebar 애니메이션 추가

--- a/src/components/commons/SidebarWrap.module.scss
+++ b/src/components/commons/SidebarWrap.module.scss
@@ -15,3 +15,13 @@
 
   animation: sidebarAnimation 0.5s;
 }
+
+@keyframes sidebarAnimation {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
