style: calendar 화살표 버튼 스타일 추가

--- a/src/components/commons/Calendar.module.scss
+++ b/src/components/commons/Calendar.module.scss
@@ -10,6 +10,10 @@
       @include mainText;
       font-size: 1.4rem;
     }
+
+    .calendarArrowButton {
+      cursor: pointer;
+    }
   }
 
   .calendar {
