--- a/src/components/commons/Calendar.module.scss
+++ b/src/components/commons/Calendar.module.scss
@@ -50,6 +50,7 @@
         justify-content: center;
         align-items: center;
         font-size: 1.1rem;
+        cursor: pointer;
       }
 
       .selected {
