style: day, date, dateWrap 클래스 이름 알맞게 변경

--- a/src/components/commons/Calendar.module.scss
+++ b/src/components/commons/Calendar.module.scss
@@ -19,7 +19,7 @@
   .calendar {
     margin: 0 -10px;
 
-    .date {
+    .day {
       margin-top: 20px;
       display: flex;
 
@@ -30,7 +30,7 @@
       }
     }
 
-    .day {
+    .dateWrap {
       margin-top: 10px;
       display: grid;
       row-gap: 7px;
