--- a/src/components/commons/Calendar.module.scss
+++ b/src/components/commons/Calendar.module.scss
@@ -47,6 +47,16 @@
         background-color: $primary;
       }
 
+      div.leftRounded {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+
+      div.rightRounded {
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+      }
+
       .date {
         height: 3rem;
         display: flex;
