--- a/src/components/commons/Calendar.module.scss
+++ b/src/components/commons/Calendar.module.scss
@@ -4,6 +4,7 @@
 .container {
   .header {
     display: flex;
+    align-items: center;
     gap: 40px;
 
     span {
@@ -13,6 +14,19 @@
 
     .calendarArrowButton {
       cursor: pointer;
+      // padding: 5px 9px;
+      width: 30px;
+      height: 30px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      border-radius: 999px;
+
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+      }
     }
   }
 
