fix: mobile에서 hover 오류 방지

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,11 @@
 body {
   background-color: $bg-outside;
 }
+
+@media (hover: hover) {
+  /* when supported */
+  button:hover {
+    color: initial;
+    background: initial;
+  }
+}
