fix: 모든 버튼에 hover시 스타일 지워지는 문제 해결

--- a/src/components/shared/Calendar.module.scss
+++ b/src/components/shared/Calendar.module.scss
@@ -81,3 +81,11 @@
     }
   }
 }
+
+@media (hover: hover) {
+  /* when supported */
+  .calendarArrowButton:hover {
+    color: initial;
+    background: initial;
+  }
+}
