--- a/src/components/shared/Toast/Toast.module.scss
+++ b/src/components/shared/Toast/Toast.module.scss
@@ -2,20 +2,38 @@
 
 .container {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: #fff;
   padding: 1em 2em;
   font-size: 1.6rem;
   border-radius: 10px;
   border: 2px solid #000;
-
-  display: flex;
-  align-items: center;
-  gap: 10px;
+  min-width: 220px;
 
   .ico-warning {
     width: 20px;
     height: 20px;
+    flex-shrink: 0;
+  }
+
+  .wrap-header {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+
+    .closeButton {
+      position: absolute;
+      top: -10px;
+      right: -25px;
+      cursor: pointer;
+    }
+  }
+
+  .wrap-contents {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
   }
 }
